# HarmonyHub

./: .env.development  .env.production  .env.template  .gitignore  CMakeLists.txt  Dockerfile  README.md  bun.lockb  index.html  main.cpp  package-lock.json  package.json  tsconfig.json  vite.config.ts
dev/: ascii-logo.psd
src/: App.css  App.tsx  Network.ts  index.css  types.d.ts
src/assets/: logo-ascii.txt
src/components/: AsciiLogo.tsx  Connect.tsx  Content.tsx  Header.tsx  Home.tsx  Music.tsx  NumberUpDown.tsx  Synthesizer.tsx  Toolbar.tsx
src/context/: contextcontext.ts  draggedpatterncontext.ts  editingpattern.ts  editingsynthesizer.ts  filecontext.ts  modalcontext.ts  mousemove.ts  mousepositions.ts  networkcontext.ts  playbackcontext.ts  positioncontext.ts  projectcontext.ts  soundcontext.ts  tabcontext.ts  tabscontext.ts  usercontext.ts  zoomcontext.ts
src/hooks/: mouse.tsx  signal.ts
src/model/: Project.ts  Session.ts  Tab.ts  audionode.ts  audionodeprops.ts  connectionpointprops.ts  linepositionprops.ts  network.ts  note.ts  pattern.ts  project.ts  synth.ts  track.ts
src/network/: crypto.ts  network.ts  packets.ts  sessions.ts  sockets.ts
src/scripts/: math.ts
src/stores/: Tabs.tsx  modal.ts  tabs.ts
src/styles/: Connect.css  Home.css  Music.css  NumberUpDown.css  Piano.css  Toolbar.css  allotment.css  note.css  react-modal.css  react-tabs.css  react-toastify.css  retro-wave.css  synthesizer.css
src/synth/: audioEndNode.ts  audioengine.ts  engine.ts  engineOLD.ts  envelope.ts  keylistener.ts  modRoM.ts  oscillatorParams.ts  routeSelector.ts  (+2 more)
(+57 files in other folders)
